Add a parallel internalClusterTest suite for BCC (#1722)
This PR adds a new internalClusterTestWithBcc test suite which runs alongside the existing internalClusterTest but with BCC (stateless.upload.delayed) enabled.

The new test suite is accompanied with a list of excluded tests that can fail locally (not necessarily always). The aim is to have the test infrastructure in place sooner and we can work on the muted tests separately and concurrently. This new test suite will be removed by merging into internalClusterTest once all BCC changes are deployed and activated in production.

Relates: ES-8317