@@ -1,3 +1,5 @@
+import org.elasticsearch.gradle.internal.test.InternalClusterTestPlugin
+
 plugins {
     id("elasticsearch.internal-es-plugin")
     id("elasticsearch.internal-cluster-test")
@@ -63,6 +65,37 @@ tasks {
         // warnings about failing to change access for FileDescriptor.fd
         // that org.elasticsearch.preallocate does
         jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+    }
+
+    /**
+     * Same as internalClusterTest but with delayed upload enabled for batched compound commit
+     * TODO: ES-8317 Remove it by merging into internalClusterTest once BCC changes are deployed to production
+     */
+    val internalClusterTestWithBcc = register<Test>("internalClusterTestWithBcc") {
+        val sourceSet = sourceSets.getByName(InternalClusterTestPlugin.SOURCE_SET_NAME)
+        setTestClassesDirs(sourceSet.getOutput().getClassesDirs())
+        setClasspath(sourceSet.getRuntimeClasspath())
+        jvmArgs("-XX:+UseG1GC", "--add-opens=java.base/java.io=ALL-UNNAMED")
+        systemProperty("es.test.stateless.upload.delayed", "true")
+
+        // A work-in-progress exclusion list of failed tests
+        filter {
+            excludeTestsMatching("*.AutoscalingMemoryMetricsIT.testNoMissedIndexMappingUpdatesOnSlowClusterUpdates")
+            excludeTestsMatching("*.CorruptionWhileRelocatingIT.testMergeWhileRelocationCausesCorruption")
+            excludeTestsMatching("*.S3ObjectStoreTests.testShouldNotRetryForNoSuchFileException")
+            excludeTestsMatching("*.StatelessRealTimeGetIT.testShardMultiGetFromTranslogDuringRelocation")
+            excludeTestsMatching("*.StatelessRealTimeGetIT.testGetFromTranslogDuringRelocation")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testGetVirtualBatchedCompoundCommitChunkFailureWhenIndexCloses")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testGetVirtualBatchedCompoundCommitChunkFailWithWrongPrimaryTerm")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testSimulatedGetVirtualBatchedCompoundCommitChunkRetryConnectivity")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testSimulatedGetVirtualBatchedCompoundCommitChunkFileError")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testSimulatedGetVirtualBatchedCompoundCommitChunkRetriesIfPrimaryRelocates")
+            excludeTestsMatching("*.VirtualBatchedCompoundCommitsIT.testSimulatedGetVirtualBatchedCompoundCommitChunkWaitsForPrimaryRelocation")
+        }
+    }
+
+    check {
+        dependsOn(internalClusterTestWithBcc)
     }
 
     yamlRestTest {
